--- a/client2/src/styles.module.scss
+++ b/client2/src/styles.module.scss
@@ -56,7 +56,7 @@
   }
 
   #content {
-    overflow-y: auto;
+    //overflow-y: auto;
     margin-bottom: 2em;
   }
 }
